# ComfyUI-NanoBanana2

./: .gitignore  README.md  __init__.py  gemini_client.py  nanobanana_node.py  pyproject.toml
shared/: __init__.py  auth.py  conversions.py  errors.py  node_utils.py  retry.py
