[project]
name = "comfyui-nanobanana2"
description = "Full-featured Google Gemini integration for ComfyUI - Image Gen, Vision, Text, Editing"
version = "2.0.0"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.8.0",
]

[project.urls]
Repository = "https://github.com/IxMxAMAR/ComfyUI-NanoBanana2"

[tool.comfy]
PublisherId = "ixmxamar"
DisplayName = "ComfyUI-NanoBanana2"
Icon = ""
